# motion-toolkit

./: CMakeLists.txt  COPYING  ChangeLog.txt  ProjectHome.md  README  README.md  README.txt
consolid/: CMakeLists.txt  consolid.h  consolidPosix.c  consolidWin32.c  rand32.c  rand32.h  snprintf.c
curve/: CMakeLists.txt  CardinalSplineCurve.cpp  CardinalSplineCurve.hpp  CircleCurve.cpp  CircleCurve.hpp  ConicBezierSplineCurve.cpp  ConicBezierSplineCurve.hpp  CubicBezierSplineCurve.cpp  CubicBezierSplineCurve.hpp  Curve.hpp  Extruder.cpp  Extruder.hpp  SplineCurve.cpp  SplineCurve.hpp  Types.hpp
doc/: CMakeLists.txt  Doxyfile.in
guts/: Allocator.hpp  Array.hpp  BinomialQueue.hpp  CMakeLists.txt  Deque.hpp  Endian.hpp  FileUtils.hpp  HashTable.hpp  IntervalList.hpp  Invariant.hpp  List.hpp  Log.hpp  Map.hpp  MemAlloc.hpp  MemAllocLog.hpp  Memory.hpp  Meta.hpp  Observer.hpp  Pool.hpp  PriorityQueue.hpp  Queue.hpp  RefPtr.hpp  RuntimeError.hpp  SStream.hpp  Serialization.hpp  Set.hpp  SharedPtr.hpp  Singleton.hpp  SpatialHash.hpp  StaticAssert.hpp  Stream.hpp  String.hpp  Syntax.hpp  TraceLog.hpp  TypeTraits.hpp  UniquePtr.hpp  UnitTest.cpp  Vector.hpp  msvc100stdvectorfix.hpp  msvc80stdvectorfix.hpp  (+1 more)
jointlimits/: CMakeLists.txt  Ellipse.cpp  Ellipse.hpp  Ellipsoid.cpp  Ellipsoid.hpp  EllipsoidJointLimits.cpp  EllipsoidJointLimits.hpp  EllipticCylinderJointLimits.cpp  EllipticCylinderJointLimits.hpp  EulerAnglesJointLimits.cpp  EulerAnglesJointLimits.hpp  JointLimits.hpp  SwingTwistJointLimits.cpp  SwingTwistJointLimits.hpp  Types.hpp  UnitTest.cpp
moto/: Algebra.hpp  BBox3.hpp  BitMask4.hpp  CMakeLists.txt  Diagonal2.hpp  Diagonal3.hpp  Dual.hpp  DualMatrix3x3.hpp  DualVector2.hpp  DualVector3.hpp  DualVector4.hpp  ErrorTracer.hpp  EulerAngles.hpp  Interval.hpp  Matrix2x2.hpp  Matrix3x3.hpp  Matrix3x4.hpp  Matrix3x4_SSE.hpp  Matrix4x3.hpp  Matrix4x4.hpp  Matrix4x4_SSE.hpp  Metric.hpp  Promote.hpp  Random.hpp  Scalar.hpp  ScalarTraits.hpp  Trigonometric.hpp  UnitTest.cpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  Vector4_SSE.hpp
test/guts/: CMakeLists.txt  GenericTests.cpp
test/jointlimits/: CMakeLists.txt  JointLimitsTests.cpp  main.cpp
test/moto/: CMakeLists.txt  DualNumberTests.cpp  MatrixTests.cpp  NumericalTests.cpp  TestHelpers.hpp  TrigonometryTests.cpp  Types.hpp  UnitTest.cpp
