add_library(curve
  CardinalSplineCurve.cpp
  CardinalSplineCurve.hpp
  CircleCurve.cpp
  CircleCurve.hpp
  ConicBezierSplineCurve.cpp
  ConicBezierSplineCurve.hpp
  CubicBezierSplineCurve.cpp
  CubicBezierSplineCurve.hpp
  Curve.hpp
  Extruder.cpp
  Extruder.hpp
  SplineCurve.cpp
  SplineCurve.hpp
  Types.hpp
)

