
add_library(jointlimits
  Ellipse.cpp
  Ellipse.hpp
  Ellipsoid.cpp
  Ellipsoid.hpp
  EllipsoidJointLimits.cpp
  EllipsoidJointLimits.hpp
  EllipticCylinderJointLimits.cpp
  EllipticCylinderJointLimits.hpp
  EulerAnglesJointLimits.cpp
  EulerAnglesJointLimits.hpp
  JointLimits.hpp
  SwingTwistJointLimits.cpp
  SwingTwistJointLimits.hpp
)

